Fix error with overlapping flotr box

--- a/browser/css/vizgrimoire.css
+++ b/browser/css/vizgrimoire.css
@@ -66,6 +66,9 @@
  * NEW CSS STYLES for VizJS-lib 2.x components
  */
 
+.flotr-mouse-value{
+z-index: 100; }
+
 .MetricsEvol,
 .PersonMetrics,
 .TimeTo {
@@ -363,15 +366,16 @@ body {
 }
 
 .table-repositories{ 
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .pagination{ 
-  margin-top: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   float: left;
 }
 .pagination-text{ 
-  padding: 25px 0 0 20px; 
+  padding: 15px 0 0 10px;
   float: left;
 }
 
